--- a/UnitTestProject1/Graderanker.Tests.csproj
+++ b/UnitTestProject1/Graderanker.Tests.csproj
@@ -50,8 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="GradeBookTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Types\GradeBookTest.cs" />
+    <Compile Include="Types\ReferenceTypeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
